# FEDOT.LLM

./: .env-example  .gitignore  .pep8speaks.yml  LICENSE  Makefile  README.md  STREAMLIT_README.md  data.py  dataset_util.py  fedot_util.py  launch_fedot.ipynb  llm_multi_call.ipynb  llm_util.py  pipeline_example.ipynb  pyproject.toml  pytest.ini  requirements.txt  streamlit-app.py  web_api.py
.devcontainer/: README.md  devcontainer.json  docker-compose.yaml
.github/workflows/: mirror_repo_to_gitlab.yml  pre-commit.yml  test.yml
chroma_rag/: chroma.ipynb
competition/: autokaggle.txt  convert.py
competition/ghouls_goblins_and_ghosts_boo/: overview.txt
competition/obesity_risks/: overview.txt
competition/spaceship_titanic/: overview.txt
credit-g/: metadata.json  model_responses.json  predictions.csv  test.csv  train.csv
datasets/: big_descriptions.json
datasets/Health_Insurance/: metadata.json
datasets/dataset_descriptions/: big_descriptions.ipynb
docker/: .dockerignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.yml  run.Dockerfile  run.Dockerfile.dockerignore
docs/: wiki-eng-beautiful.md  wiki-eng.md  wiki-ru-beautiful.md  wiki-ru.md
examples/: __init__.py  agent-example.ipynb  fedot_llm_cli.py  generate_description.py  huggingface_llm.py  kaggle.py  launch_fedot.ipynb  llm_multi_call.ipynb  pipeline_example.ipynb  run_competition.ipynb  runner.py  titanic_example.ipynb  translator_example.ipynb  webmodel_llm.py
examples/bank-churn/: bank-churn.ipynb
examples/by_benchmarks/: categorical.ipynb  task_type.ipynb
examples/by_datasets/: handwriting.ipynb  health_insurance.ipynb  health_insurance_ru.ipynb  multimodal.ipynb  multimodal.py  titanic.ipynb
examples/data_analyst/: code.ipynb  main.ipynb
examples/ghouls-goblins-and-ghosts-boo/: ghouls-goblins-and-ghosts-boo.ipynb  solution.py
examples/house-prices-advanced-regression-techniques/: house-prices-advanced-regression-techniques.ipynb
examples/playground-series-s4e2/: playground-series-s4e2.ipynb
examples/playground-series-s4e3/: playground-series-s4e2.ipynb
examples/playground-series-s4e6/: playground-series-s4e6.ipynb
examples/playground-series-s4e7-simple/: playground-series-s4e7.ipynb
examples/playground-series-s4e72-complex/: playground-series-s4e7.ipynb
examples/titanic/: overview.txt  titanic.ipynb
examples/translation/: .gitignore
fedot_llm/: chains.py  chat.py  fedot_util.py  formatting.py  langside.py  main.py  prompts.py  web_api.py  zip.py
fedot_llm/agents/: base.py  memory.py  state.py  utils.py
fedot_llm/ai/: __init__.py  actions.py  memory.py  stages.py
fedot_llm/benchmarks/: __init__.py  base.py  categorical.py  task_type.py
fedot_llm/chat/: __init__.py  base.py  custom_web.py
fedot_llm/data/: __init__.py  data.py
fedot_llm/language_models/: actions.py  base.py  prompts.py
fedot_llm/llm/: inference.py
fedot_llm/output/: __init__.py  base.py  console_output.py  jupyter.py  jupyter_output.py
fedot_llm/utils/: singleton.py
fedotllm/: __init__.py  actions.py  constants.py  data.py  enviroments.py  exceptions.py  heuristics.py  langside.py  llm.py  log.py  main.py  prompts.py  run_competition.py  streamlit-app.py
fedotllm/agents/: __init__.py  agent_wrapper.py  base.py  embedding_memory.py  memory.py  retrieve.py  scraper.py  state.py  supervisor.py  translator.py  utils.py
kaggle-dataset-tests/: 1-steel-industry-without-time.ipynb  2-steel-plates-faults.ipynb  3-ps2e5-automl-fedot-lgbm.ipynb  4-software-defects-xgboost.ipynb  5-run-catboost.py
kaggle_comp/: .gitignore
legacy/: pipeline.ipynb
parsing/: Kaggle.ipynb
scripts/: ollama_entry.sh  run_jupyter_tests.zsh
settings/: config.toml  config_loader.py
titanic/: metadata.json  model_responses.json  predictions.csv
web/: README.md
(+701 files in other folders)
