[project]
name = "fedotllm"
version = "0.1.0"
description = "LLM-based prototype for nexgen AutoML"
authors = [
    {name = "Alexey Lapin", email = "a.lapin@itmo.ru"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "autoflake>=2.3.1",
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "deep-translator>=1.11.4",
    "dynaconf>=3.2.10",
    "fedot>=0.7.5",
    "giotto-tda==0.6.0",
    "graphviz>=0.20.3",
    "html2text>=2024.2.26",
    "langchain-core>=0.3.49",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pygwalker>=0.4.9.14",
    "setuptools>=78.1.0",
    "streamlit>=1.44.0",
    "streamlit-extras>=0.6.0",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]

[tool.setuptools]
packages = ["fedotllm"]

[tool.ruff]
exclude = [
    "user_data/*",
    "test*",
    "fedotllm/**/templates/**",
    "examples",
]
