[project]
name = "fedotllm"
version = "0.1.0"
description = "LLM-based prototype for nexgen AutoML"
authors = [{ name = "Alexey Lapin", email = "a.lapin@itmo.ru" }]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "dynaconf>=3.2.10",
    "fedot>=0.7.5",
    "giotto-tda>=0.6.0",
    "graphviz>=0.20.3",
    "html2text>=2024.2.26",
    "json-repair>=0.44.1",
    "kaggle>=1.7.4.5",
    "langchain-core>=0.3.49",
    "langdetect>=1.0.9",
    "langfuse==2.59.7",
    "langgraph>=0.3.21",
    "litellm==1.71.2",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.1",
    "pygwalker>=0.4.9.14",
    "setuptools>=78.1.0",
    "streamlit==1.44.0",
    "streamlit-extras>=0.6.0",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.12.0",
    "ruff>=0.11.2",
    "ty>=0.0.1a14",
]

[tool.setuptools]
packages = ["fedotllm", "examples"]

[tool.ty.environment]
python = "./.venv"

[tool.ruff]
exclude = [
    "user_data/*",
    "fedotllm/**/templates/**",
    "examples",
    "kaggle_comp",
]
